--2020-02-25 22:39:14--  http://mota-engil.com.gn/media/1901/meeca_org_04-2017_organogramas_pt.pdf%0D
Resolving mota-engil.com.gn (mota-engil.com.gn)... --2020-02-25 22:39:14--  http://mota-engil.com.gn/media/1901/meeca_org_04-2017_organogramas_pt.pdf%0D
Resolving mota-engil.com.gn (mota-engil.com.gn)... 194.169.215.75
Connecting to mota-engil.com.gn (mota-engil.com.gn)|194.169.215.75|:80... connected.
HTTP request sent, awaiting response... 400 Bad Request
2020-02-25 22:39:14 ERROR 400: Bad Request.

194.169.215.75
Connecting to mota-engil.com.gn (mota-engil.com.gn)|194.169.215.75|:80... connected.
HTTP request sent, awaiting response... 400 Bad Request
2020-02-25 22:39:14 ERROR 400: Bad Request.

