--2020-03-02 04:15:57--  http://mota-engil.com.gn/media/1901/meeca_org_04-2017_organogramas_pt.pdf
Resolving mota-engil.com.gn (mota-engil.com.gn)... 194.169.215.75
Connecting to mota-engil.com.gn (mota-engil.com.gn)|194.169.215.75|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 825239 (806K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  6% 4.98M 1s
    50K .......... .......... .......... .......... .......... 12% 9.88M 1s
   100K .......... .......... .......... .......... .......... 18%  144M 1s
   150K .......... .......... .......... .......... .......... 24% 10.4M 1s
   200K .......... .......... .......... .......... .......... 31%  153M 0s
   250K .......... .......... .......... .......... .......... 37%  194M 0s
   300K .......... .......... .......... .......... .......... 43% 10.7M 0s
   350K .......... .......... .......... .......... .......... 49%  524M 0s
   400K .......... .......... .......... .......... .......... 55% 94.9M 0s
   450K .......... .......... .......... .......... .......... 62% 13.0M 0s
   500K .......... .......... .......... .......... .......... 68%  123M 0s
   550K .......... .......... .......... .......... .......... 74%  153M 0s
   600K .......... .......... .......... .......... .......... 80%  197M 0s
   650K .......... .......... .......... .......... .......... 86% 76.9M 0s
   700K .......... .......... .......... .......... .......... 93% 14.5M 0s
   750K .......... .......... .......... .......... .......... 99%  154M 0s
   800K .....                                                 100%  488M=0.3s

2020-03-02 04:15:58 (22.8 Mb/s) - ‘/dev/null’ saved [825239/825239]

