--2020-02-25 22:39:04--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_RSE_PRAO21.pdf%0D
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... --2020-02-25 22:39:04--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_RSE_PRAO21.pdf%0D
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

--2020-02-25 22:39:04--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_Auditeur_interne.pdf%0D
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

--2020-02-25 22:39:04--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_Auditeur_interne.pdf%0D
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

