--2020-03-02 04:15:37--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_RSE_PRAO21.pdf
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 602114 (588K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  8% 8.47M 1s
    50K .......... .......... .......... .......... .......... 17% 16.9M 0s
   100K .......... .......... .......... .......... .......... 25%  226M 0s
   150K .......... .......... .......... .......... .......... 34%  241M 0s
   200K .......... .......... .......... .......... .......... 42% 16.8M 0s
   250K .......... .......... .......... .......... .......... 51%  264M 0s
   300K .......... .......... .......... .......... .......... 59% 19.9M 0s
   350K .......... .......... .......... .......... .......... 68%  176M 0s
   400K .......... .......... .......... .......... .......... 76%  151M 0s
   450K .......... .......... .......... .......... .......... 85%  236M 0s
   500K .......... .......... .......... .......... .......... 93% 23.8M 0s
   550K .......... .......... .......... ........             100%  179M=0.1s

2020-03-02 04:15:37 (32.5 Mb/s) - ‘/dev/null’ saved [602114/602114]

--2020-03-02 04:15:37--  http://peches.gov.gn/images/APPEL_v_A_CANDIDATURE_Auditeur_interne.pdf
Resolving peches.gov.gn (peches.gov.gn)... 144.76.199.134
Connecting to peches.gov.gn (peches.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 580478 (567K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  8% 8.67M 0s
    50K .......... .......... .......... .......... .......... 17% 18.0M 0s
   100K .......... .......... .......... .......... .......... 26%  186M 0s
   150K .......... .......... .......... .......... .......... 35%  101M 0s
   200K .......... .......... .......... .......... .......... 44% 19.9M 0s
   250K .......... .......... .......... .......... .......... 52%  123M 0s
   300K .......... .......... .......... .......... .......... 61% 22.0M 0s
   350K .......... .......... .......... .......... .......... 70%  150M 0s
   400K .......... .......... .......... .......... .......... 79%  114M 0s
   450K .......... .......... .......... .......... .......... 88%  295M 0s
   500K .......... .......... .......... .......... .......... 97% 24.3M 0s
   550K .......... ......                                     100%  504M=0.1s

2020-03-02 04:15:37 (32.4 Mb/s) - ‘/dev/null’ saved [580478/580478]

