--2020-02-25 22:39:12--  http://presidence.gov.gn/images/projetdenouvelleconstitution/NouvelleConstitution.pdf%0D
Resolving presidence.gov.gn (presidence.gov.gn)... 66.70.216.80
Connecting to presidence.gov.gn (presidence.gov.gn)|66.70.216.80|:80... connected.
HTTP request sent, awaiting response... --2020-02-25 22:39:12--  http://presidence.gov.gn/images/projetdenouvelleconstitution/NouvelleConstitution.pdf%0D
Resolving presidence.gov.gn (presidence.gov.gn)... 66.70.216.80
Connecting to presidence.gov.gn (presidence.gov.gn)|66.70.216.80|:80... 404 Not Found
2020-02-25 22:39:12 ERROR 404: Not Found.

connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:12 ERROR 404: Not Found.

