--2020-02-25 22:39:06--  http://www.4ng.eti.net.gn/4NGbyETI/eti_livret_client_2013.pdf%0D
Resolving www.4ng.eti.net.gn (www.4ng.eti.net.gn)... --2020-02-25 22:39:06--  http://www.4ng.eti.net.gn/4NGbyETI/eti_livret_client_2013.pdf%0D
Resolving www.4ng.eti.net.gn (www.4ng.eti.net.gn)... 41.79.237.18
Connecting to www.4ng.eti.net.gn (www.4ng.eti.net.gn)|41.79.237.18|:80... 41.79.237.18
Connecting to www.4ng.eti.net.gn (www.4ng.eti.net.gn)|41.79.237.18|:80... connected.
HTTP request sent, awaiting response... connected.
HTTP request sent, awaiting response... Read error (Connection timed out) in headers.
Giving up.

Read error (Connection timed out) in headers.
Giving up.

