--2020-03-02 04:15:58--  http://www.afrimalin.com.gn/theme/media/pdf/AFRIMALIN_Dossier_de_presse.pdf%3Fv11
Resolving www.afrimalin.com.gn (www.afrimalin.com.gn)... 34.254.101.52, 54.77.97.60
Connecting to www.afrimalin.com.gn (www.afrimalin.com.gn)|34.254.101.52|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.afrimalin.com.gn/theme/media/pdf/AFRIMALIN_Dossier_de_presse.pdf?v11 [following]
--2020-03-02 04:15:59--  https://www.afrimalin.com.gn/theme/media/pdf/AFRIMALIN_Dossier_de_presse.pdf?v11
Connecting to www.afrimalin.com.gn (www.afrimalin.com.gn)|34.254.101.52|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1285427 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  3% 25.8M 0s
    50K .......... .......... .......... .......... ..........  7% 33.6M 0s
   100K .......... .......... .......... .......... .......... 11%  115M 0s
   150K .......... .......... .......... .......... .......... 15%  202M 0s
   200K .......... .......... .......... .......... .......... 19% 33.9M 0s
   250K .......... .......... .......... .......... .......... 23% 80.7M 0s
   300K .......... .......... .......... .......... .......... 27% 68.1M 0s
   350K .......... .......... .......... .......... .......... 31%  124M 0s
   400K .......... .......... .......... .......... .......... 35%  211M 0s
   450K .......... .......... .......... .......... .......... 39%  149M 0s
   500K .......... .......... .......... .......... .......... 43%  113M 0s
   550K .......... .......... .......... .......... .......... 47% 66.4M 0s
   600K .......... .......... .......... .......... .......... 51%  134M 0s
   650K .......... .......... .......... .......... .......... 55%  102M 0s
   700K .......... .......... .......... .......... .......... 59%  442M 0s
   750K .......... .......... .......... .......... .......... 63%  105M 0s
   800K .......... .......... .......... .......... .......... 67% 96.7M 0s
   850K .......... .......... .......... .......... .......... 71%  393M 0s
   900K .......... .......... .......... .......... .......... 75%  271M 0s
   950K .......... .......... .......... .......... .......... 79%  198M 0s
  1000K .......... .......... .......... .......... .......... 83%  146M 0s
  1050K .......... .......... .......... .......... .......... 87%  169M 0s
  1100K .......... .......... .......... .......... .......... 91%  146M 0s
  1150K .......... .......... .......... .......... .......... 95%  100M 0s
  1200K .......... .......... .......... .......... .......... 99%  137M 0s
  1250K .....                                                 100%  868K=0.1s

2020-03-02 04:15:59 (93.1 Mb/s) - ‘/dev/null’ saved [1285427/1285427]

