--2020-02-25 22:39:04--  http://www.apip.gov.gn/Document/vaccins.pdf%0D
Resolving www.apip.gov.gn (www.apip.gov.gn)... --2020-02-25 22:39:04--  http://www.apip.gov.gn/Document/vaccins.pdf%0D
Resolving www.apip.gov.gn (www.apip.gov.gn)... 46.105.57.169
Connecting to www.apip.gov.gn (www.apip.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 302 Found
Location: https://apip.gov.gn/index.php [following]
--2020-02-25 22:39:04--  https://apip.gov.gn/index.php
Resolving apip.gov.gn (apip.gov.gn)... 46.105.57.169
Connecting to apip.gov.gn (apip.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 46.105.57.169
Connecting to www.apip.gov.gn (www.apip.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 302 Found
Location: https://apip.gov.gn/index.php [following]
--2020-02-25 22:39:04--  https://apip.gov.gn/index.php
Resolving apip.gov.gn (apip.gov.gn)... 46.105.57.169
Connecting to apip.gov.gn (apip.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: unspecified [text/html]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... .......... 59.3M
    50K .......... ....                                         585M=0.007s

2020-02-25 22:39:04 (74.7 Mb/s) - ‘/dev/null’ saved [66519]

--2020-02-25 22:39:04--  http://www.apip.gov.gn/Document/vaccins.pdf%0D
Resolving www.apip.gov.gn (www.apip.gov.gn)... 46.105.57.169
Connecting to www.apip.gov.gn (www.apip.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 302 Found
Location: https://apip.gov.gn/index.php [following]
--2020-02-25 22:39:04--  https://apip.gov.gn/index.php
Resolving apip.gov.gn (apip.gov.gn)... 46.105.57.169
Connecting to apip.gov.gn (apip.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: unspecified [text/html]
Saving to: ‘/dev/null’

     0K .........200 OK
Length: unspecified [text/html]
Saving to: ‘/dev/null’

     0K ........ .......... .......... ............ .......... ...... .......... 62.4M..... ....
    50K .......... .......... .                                         951M=0.007s

2020-02-25 22:39:05 (79.5 Mb/s) - ‘/dev/null’ saved [66519]

......... 53.2M
    50K .......... ....                                        60.4M=0.01s

2020-02-25 22:39:05 (54.7 Mb/s) - ‘/dev/null’ saved [66519]

--2020-02-25 22:39:05--  http://www.apip.gov.gn/Document/vaccins.pdf%0D
Resolving www.apip.gov.gn (www.apip.gov.gn)... 46.105.57.169
Connecting to www.apip.gov.gn (www.apip.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 302 Found
Location: https://apip.gov.gn/index.php [following]
--2020-02-25 22:39:05--  https://apip.gov.gn/index.php
Resolving apip.gov.gn (apip.gov.gn)... 46.105.57.169
Connecting to apip.gov.gn (apip.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: unspecified [text/html]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... .......... 62.2M
    50K .......... ....                                        1.64G=0.007s

2020-02-25 22:39:05 (79.9 Mb/s) - ‘/dev/null’ saved [66519]

