--2020-03-02 04:15:38--  http://www.apip.gov.gn/Document/vaccins.pdf
Resolving www.apip.gov.gn (www.apip.gov.gn)... 46.105.57.169
Connecting to www.apip.gov.gn (www.apip.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 302 Found
Location: https://apip.gov.gn/Document/vaccins.pdf [following]
--2020-03-02 04:15:39--  https://apip.gov.gn/Document/vaccins.pdf
Resolving apip.gov.gn (apip.gov.gn)... 46.105.57.169
Connecting to apip.gov.gn (apip.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 106790 (104K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... .......... 47% 31.3M 0s
    50K .......... .......... .......... .......... .......... 95% 45.2M 0s
   100K ....                                                  100%  702K=0.02s

2020-03-02 04:15:39 (38.5 Mb/s) - ‘/dev/null’ saved [106790/106790]

