--2020-02-25 22:39:03--  http://www.atiko.com.gn/Affiche_Atiko.pdf%0D
Resolving www.atiko.com.gn (www.atiko.com.gn)... --2020-02-25 22:39:03--  http://www.atiko.com.gn/Affiche_Atiko.pdf%0D
Resolving www.atiko.com.gn (www.atiko.com.gn)... 77.194.127.130
Connecting to www.atiko.com.gn (www.atiko.com.gn)|77.194.127.130|:80... connected.
HTTP request sent, awaiting response... 400 Bad Request
2020-02-25 22:39:03 ERROR 400: Bad Request.

77.194.127.130
Connecting to www.atiko.com.gn (www.atiko.com.gn)|77.194.127.130|:80... connected.
HTTP request sent, awaiting response... 400 Bad Request
2020-02-25 22:39:04 ERROR 400: Bad Request.

