--2020-03-02 04:15:36--  http://www.atiko.com.gn/Affiche_Atiko.pdf
Resolving www.atiko.com.gn (www.atiko.com.gn)... 77.194.127.130
Connecting to www.atiko.com.gn (www.atiko.com.gn)|77.194.127.130|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 219391 (214K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... .......... 23% 5.46M 0s
    50K .......... .......... .......... .......... .......... 46% 10.8M 0s
   100K .......... .......... .......... .......... .......... 70% 10.4M 0s
   150K .......... .......... .......... .......... .......... 93% 11.2M 0s
   200K .......... ....                                       100%  981M=0.2s

2020-03-02 04:15:36 (9.28 Mb/s) - ‘/dev/null’ saved [219391/219391]

