--2020-02-25 22:39:05--  https://www.coursupreme.org.gn/download/CODE-PENAL.pdf%0D
Resolving www.coursupreme.org.gn (www.coursupreme.org.gn)... --2020-02-25 22:39:05--  https://www.coursupreme.org.gn/download/CODE-PENAL.pdf%0D
Resolving www.coursupreme.org.gn (www.coursupreme.org.gn)... 77.72.0.70
Connecting to www.coursupreme.org.gn (www.coursupreme.org.gn)|77.72.0.70|:443... connected.
HTTP request sent, awaiting response... 77.72.0.70
Connecting to www.coursupreme.org.gn (www.coursupreme.org.gn)|77.72.0.70|:443... connected.
HTTP request sent, awaiting response... 404 Not Found
404 Not Found
2020-02-25 22:39:06 ERROR 404: Not Found.

2020-02-25 22:39:06 ERROR 404: Not Found.

