--2020-03-02 04:15:39--  http://www.coursupreme.org.gn/download/CODE-PENAL.pdf
Resolving www.coursupreme.org.gn (www.coursupreme.org.gn)... 77.72.0.70
Connecting to www.coursupreme.org.gn (www.coursupreme.org.gn)|77.72.0.70|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 513243 (501K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  9% 44.8M 0s
    50K .......... .......... .......... .......... .......... 19% 89.4M 0s
   100K .......... .......... .......... .......... .......... 29% 82.7M 0s
   150K .......... .......... .......... .......... .......... 39%  311M 0s
   200K .......... .......... .......... .......... .......... 49%  106M 0s
   250K .......... .......... .......... .......... .......... 59%  265M 0s
   300K .......... .......... .......... .......... .......... 69% 79.6M 0s
   350K .......... .......... .......... .......... .......... 79%  450M 0s
   400K .......... .......... .......... .......... .......... 89%  185M 0s
   450K .......... .......... .......... .......... .......... 99%  392M 0s
   500K .                                                     100%  199K=0.03s

2020-03-02 04:15:40 (118 Mb/s) - ‘/dev/null’ saved [513243/513243]

