--2020-03-02 04:15:51--  http://www.diasporaguinee.gov.gn/document/rapport-forum-diaspora
Resolving www.diasporaguinee.gov.gn (www.diasporaguinee.gov.gn)... 46.105.57.169
Connecting to www.diasporaguinee.gov.gn (www.diasporaguinee.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1805253 (1.7M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  2% 33.4M 0s
    50K .......... .......... .......... .......... ..........  5%  173M 0s
   100K .......... .......... .......... .......... ..........  8% 61.0M 0s
   150K .......... .......... .......... .......... .......... 11% 45.8M 0s
   200K .......... .......... .......... .......... .......... 14%  188M 0s
   250K .......... .......... .......... .......... .......... 17% 65.3M 0s
   300K .......... .......... .......... .......... .......... 19%  144M 0s
   350K .......... .......... .......... .......... .......... 22% 56.9M 0s
   400K .......... .......... .......... .......... .......... 25%  136M 0s
   450K .......... .......... .......... .......... .......... 28% 56.0M 0s
   500K .......... .......... .......... .......... .......... 31%  189M 0s
   550K .......... .......... .......... .......... .......... 34% 79.8M 0s
   600K .......... .......... .......... .......... .......... 36%  114M 0s
   650K .......... .......... .......... .......... .......... 39%  135M 0s
   700K .......... .......... .......... .......... .......... 42% 79.3M 0s
   750K .......... .......... .......... .......... .......... 45%  207M 0s
   800K .......... .......... .......... .......... .......... 48% 62.5M 0s
   850K .......... .......... .......... .......... .......... 51%  176M 0s
   900K .......... .......... .......... .......... .......... 53%  103M 0s
   950K .......... .......... .......... .......... .......... 56% 62.1M 0s
  1000K .......... .......... .......... .......... .......... 59%  134M 0s
  1050K .......... .......... .......... .......... .......... 62% 99.2M 0s
  1100K .......... .......... .......... .......... .......... 65% 97.8M 0s
  1150K .......... .......... .......... .......... .......... 68%  220M 0s
  1200K .......... .......... .......... .......... .......... 70%  120M 0s
  1250K .......... .......... .......... .......... .......... 73%  133M 0s
  1300K .......... .......... .......... .......... .......... 76%  165M 0s
  1350K .......... .......... .......... .......... .......... 79% 81.5M 0s
  1400K .......... .......... .......... .......... .......... 82%  201M 0s
  1450K .......... .......... .......... .......... .......... 85%  120M 0s
  1500K .......... .......... .......... .......... .......... 87%  120M 0s
  1550K .......... .......... .......... .......... .......... 90% 98.5M 0s
  1600K .......... .......... .......... .......... .......... 93%  222M 0s
  1650K .......... .......... .......... .......... .......... 96%  231M 0s
  1700K .......... .......... .......... .......... .......... 99% 94.2M 0s
  1750K .......... ..                                         100%  119M=0.1s

2020-03-02 04:15:54 (97.1 Mb/s) - ‘/dev/null’ saved [1805253/1805253]

