--2020-02-25 22:39:04--  http://www.gouvernement.gov.gn/images/liste_ambassage_gn.pdf%0D
Resolving www.gouvernement.gov.gn (www.gouvernement.gov.gn)... 144.76.199.134
Connecting to www.gouvernement.gov.gn (www.gouvernement.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

--2020-02-25 22:39:04--  http://www.gouvernement.gov.gn/images/liste_ambassage_gn.pdf%0D
Resolving www.gouvernement.gov.gn (www.gouvernement.gov.gn)... 144.76.199.134
Connecting to www.gouvernement.gov.gn (www.gouvernement.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 404 Not Found
2020-02-25 22:39:04 ERROR 404: Not Found.

