--2020-03-02 04:15:36--  http://www.gouvernement.gov.gn/images/liste_ambassage_gn.pdf
Resolving www.gouvernement.gov.gn (www.gouvernement.gov.gn)... 144.76.199.134
Connecting to www.gouvernement.gov.gn (www.gouvernement.gov.gn)|144.76.199.134|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 360651 (352K) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... .......... 14% 8.83M 0s
    50K .......... .......... .......... .......... .......... 28% 18.7M 0s
   100K .......... .......... .......... .......... .......... 42% 88.1M 0s
   150K .......... .......... .......... .......... .......... 56%  169M 0s
   200K .......... .......... .......... .......... .......... 70% 19.8M 0s
   250K .......... .......... .......... .......... .......... 85% 88.2M 0s
   300K .......... .......... .......... .......... .......... 99% 22.8M 0s
   350K ..                                                    100%  360K=0.1s

2020-03-02 04:15:37 (24.3 Mb/s) - ‘/dev/null’ saved [360651/360651]

