--2020-02-25 22:39:02--  https://www.invest.gov.gn/dossier/2%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... --2020-02-25 22:39:02--  https://www.invest.gov.gn/dossier/2%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1218560 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K ........200 OK
Length: 1218560 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... ......... .......... .......... ...... ..........  4% 60.5M 0s
    50K .......... .......... .......... .......... ........... ..........  4% 59.1M 0s
    50K .......... .......... ..............  8%  115M 0s
   100K .......... .......... .......... .......... .......... 12% 1.64G 0s
   150K .......... .......... .......... .......... .......... 16% 2.13G 0s
   200K ...... .......... ..........  8% 84.7M 0s
   100K .......... .......... ......... .......... .......... .......... .......... 21%  133M 0s
   250K .......... .......... .......... .......... .......... 25% 2.10G 0s
   300K .......... .......... ............. .......... .......... 12%  102M 0s
   150K ........... .......... .......... 29%  131M 0s
   350K .......... .......... .......... .......... .......... 33% 1.24G 0s
   400K .......... .......... .......... .......... .......... 37% 2.16G 0s
   450K .......... .......... .......... .......... .......... 42% 1.97G 0s
   500K .......... .......... .......... .......... .......... 46% 2.14G 0s
   550K .......... .......... .......... .......... .......... 50% 2.76G 0s
   600K .......... .......... .......... .......... .......... 54% 3.15G 0s
   650K .......... .......... .... .......... .......... .......... .......... 16%  117M 0s
   200K ................. .......... .......... 58%  164M 0s
   700K .......... .......... .......... .......... .......... 63% 1.72G 0s
   750K .......... .......... .......... .......... .......... 67% 2.28G 0s
   800K .......... .......... .......... .......... .......... 71% 2.03G 0s
   850K .......... .......... .......... .......... .......... 75% 2.07G 0s
   900K .......... .......... .......... .......... .......... 79% 1.41G 0s
   950K .......... .......... .......... .......... .......... 84% 2.92G 0s
  1000K .......... .......... .......... .......... .......... 88% 2.29G 0s
  1050K .......... .......... .......... .......... .......... 92% 2.28G 0s
  1100K .......... .......... .......... .......... .......... 96% 1.58G 0s
  1150K .......... .......... ............ .......... .......... .......... .......... 21%  111M 0s
   250K .......... . ..........           100%  241M=0.02s

2020-02-25 22:39:03 (404 Mb/s) - ‘/dev/null’ saved [1218560/1218560]

......... .......... .......... .......... 25%  121M 0s
   300K .......... ......--2020-02-25 22:39:03--  https://www.invest.gov.gn/dossier/2%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... .... .......... .......... .......... 29%  123M 0s
   350K .......... .......... .....connected.
..... .......... .......... 33%  121M 0s
   400K .......... .......... .......... .......... .......... 37%  125M 0s
   450K .......... .......... .......... .......... .......... 42% 1.69G 0s
   500K .......... .......... .......... .......... .......... 46%  127M 0s
   550K .......... .......HTTP request sent, awaiting response... ... .......... .......... .......... 50%  126M 0s
   600K .......... .......... .......... .......... .......... 54%  124M 0s
   650K .......... .......... .......... .......... .......... 58% 1.77G 0s
   700K .......... .......... .......... .......... .......... 63%  122M 0s
   750K .......... .......... .......... .......... .......... 67%  129M 0s
   800K .......... .......... .......... .......... .......... 71% 1.87G 0s
   850K .......... .......... .......... .......... .......... 75%  123M 0s
   900K .......... .......... .......... .......... .......... 79% 1.60G 0s
   950K .......... .......... .......... .......... .......... 84%  128M 0s
  1000K .......... .......... .......... .......... .......... 88%  128M 0s
  1050K .......... .......... .......... .......... .......... 92% 1.69G 0s
  1100K .......... .......... .......... .......... .......... 96%  128M 0s
  1150K .......... .......... .......... ..........           100% 1.58G=0.07s

2020-02-25 22:39:03 (145 Mb/s) - ‘/dev/null’ saved [1218560/1218560]

--2020-02-25 22:39:03--  https://www.invest.gov.gn/dossier/2%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... 200 OK
Length: 1218560 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K ......connected.
.... .......... .......... .......... ..........  4% 61.2M 0s
    50K .......... .......... .......... .......... ..........  8%  117M 0s
   100K .......... .......... .......... .......... .......... 12% 1.74G 0sHTTP request sent, awaiting response... 
   150K .......... .......... .......... .......... .......... 16%  129M 0s
   200K .......... .......... .......... .......... .......... 21% 2.21G 0s
   250K .......... .......... .......... .......... .......... 25% 1.77G 0s
   300K .......... .......... .......... .......... .......... 29%  139M 0s
   350K .......... .......... .......... .......... .......... 33% 1.65G 0s
   400K .......... .......... .......... .......... .......... 37% 1.76G 0s
   450K .......... .......... .......... .......... .......... 42% 1.90G 0s
   500K .......... .......... .......... .......... .......... 46% 2.03G 0s
   550K .......... .......... .......... .......... .......... 50%  151M 0s
   600K .......... .......... .......... .......... .......... 54% 3.38G 0s
   650K .......... .......... .......... .......... .......... 58% 2.13G 0s
   700K .......... .......... .......... .......... .......... 63% 1.53G 0s
   750K .......... .......... .......... .......... .......... 67% 1.50G 0s
   800K .......... .......... .......... .......... .......... 71% 1.71G 0s
   850K .......... .......... .......... .......... .......... 75% 2.08G 0s
   900K .......... .......... .......... .......... .......... 79% 2.64G 0s
   950K .......... .......... .......... .......... .......... 84% 1.77G 0s
  1000K .......... .......... .......... .......... .......... 88% 1.64G 0s
  1050K .......... .......... .......... .......... .......... 92%  268M 0s
  1100K .......... .......... .......... .......... .......... 96% 1.77G 0s
  1150K .......... .......... .......... ..........           100% 1.57G=0.02s

2020-02-25 22:39:03 (398 Mb/s) - ‘/dev/null’ saved [1218560/1218560]

--2020-02-25 22:39:03--  http://www.invest.gov.gn/document/synopsis-competitivite%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.invest.gov.gn/document/synopsis-competitivite%0d [following]
--2020-02-25 22:39:03--  https://www.invest.gov.gn/document/synopsis-competitivite%0d
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 500 Internal Server Error
2020-02-25 22:39:03 ERROR 500: Internal Server Error.

200 OK
Length: 1218560 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  4% 60.7M 0s
    50K .......... .......... .......... .......... ..........  8%  120M 0s
   100K .......... .......... .......... .......... .......... 12% 2.06G 0s
   150K .......... .......... .......... .......... .......... 16% 2.27G 0s
   200K .......... .......... .......... .......... .......... 21%  117M 0s
   250K .......... .......... .......... .......... .......... 25% 2.58G 0s
   300K .......... .......... .......... .......... .......... 29% 7.76G 0s
   350K .......... .......... .......... .......... .......... 33%  135M 0s
   400K .......... .......... .......... .......... .......... 37% 2.86G 0s
   450K .......... .......... .......... .......... .......... 42% 2.03G 0s
   500K .......... .......... .......... .......... .......... 46% 2.00G 0s
   550K .......... .......... .......... .......... .......... 50% 1.79G 0s
   600K .......... .......... .......... .......... .......... 54% 1.57G 0s
   650K .......... .......... .......... .......... .......... 58% 2.04G 0s
   700K .......... .......... .......... .......... .......... 63%  153M 0s
   750K .......... .......... .......... .......... .......... 67% 1.59G 0s
   800K .......... .......... .......... .......... .......... 71% 1.62G 0s
   850K .......... .......... .......... .......... .......... 75% 1.91G 0s
   900K .......... .......... .......... .......... .......... 79% 1.55G 0s
   950K .......... .......... .......... .......... .......... 84% 2.12G 0s
  1000K .......... .......... .......... .......... .......... 88% 2.32G 0s
  1050K .......... .......... .......... .......... .......... 92% 2.03G 0s
  1100K .......... .......... .......... .......... .......... 96% 2.42G 0s
  1150K .......... .......... .......... ..........           100% 2.53G=0.02s

2020-02-25 22:39:03 (423 Mb/s) - ‘/dev/null’ saved [1218560/1218560]

--2020-02-25 22:39:03--  http://www.invest.gov.gn/document/synopsis-competitivite%0D
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.invest.gov.gn/document/synopsis-competitivite%0d [following]
--2020-02-25 22:39:03--  https://www.invest.gov.gn/document/synopsis-competitivite%0d
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 500 Internal Server Error
2020-02-25 22:39:03 ERROR 500: Internal Server Error.

