--2020-03-02 04:15:33--  http://www.invest.gov.gn/dossier/2
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.invest.gov.gn/dossier/2 [following]
--2020-03-02 04:15:34--  https://www.invest.gov.gn/dossier/2
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 1218560 (1.2M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  4% 33.8M 0s
    50K .......... .......... .......... .......... ..........  8% 50.3M 0s
   100K .......... .......... .......... .......... .......... 12%  167M 0s
   150K .......... .......... .......... .......... .......... 16%  206M 0s
   200K .......... .......... .......... .......... .......... 21% 65.9M 0s
   250K .......... .......... .......... .......... .......... 25%  163M 0s
   300K .......... .......... .......... .......... .......... 29%  107M 0s
   350K .......... .......... .......... .......... .......... 33% 93.9M 0s
   400K .......... .......... .......... .......... .......... 37%  191M 0s
   450K .......... .......... .......... .......... .......... 42%  402M 0s
   500K .......... .......... .......... .......... .......... 46% 55.0M 0s
   550K .......... .......... .......... .......... .......... 50%  273M 0s
   600K .......... .......... .......... .......... .......... 54%  111M 0s
   650K .......... .......... .......... .......... .......... 58% 68.4M 0s
   700K .......... .......... .......... .......... .......... 63%  332M 0s
   750K .......... .......... .......... .......... .......... 67%  274M 0s
   800K .......... .......... .......... .......... .......... 71% 51.5M 0s
   850K .......... .......... .......... .......... .......... 75%  208M 0s
   900K .......... .......... .......... .......... .......... 79%  357M 0s
   950K .......... .......... .......... .......... .......... 84% 45.2M 0s
  1000K .......... .......... .......... .......... .......... 88%  426M 0s
  1050K .......... .......... .......... .......... .......... 92%  374M 0s
  1100K .......... .......... .......... .......... .......... 96% 63.8M 0s
  1150K .......... .......... .......... ..........           100%  189M=0.1s

2020-03-02 04:15:35 (101 Mb/s) - ‘/dev/null’ saved [1218560/1218560]

--2020-03-02 04:15:35--  http://www.invest.gov.gn/document/synopsis-competitivite
Resolving www.invest.gov.gn (www.invest.gov.gn)... 46.105.57.169
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://www.invest.gov.gn/document/synopsis-competitivite [following]
--2020-03-02 04:15:35--  https://www.invest.gov.gn/document/synopsis-competitivite
Connecting to www.invest.gov.gn (www.invest.gov.gn)|46.105.57.169|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 2606354 (2.5M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  1% 27.3M 1s
    50K .......... .......... .......... .......... ..........  3% 65.5M 1s
   100K .......... .......... .......... .......... ..........  5%  172M 0s
   150K .......... .......... .......... .......... ..........  7%  208M 0s
   200K .......... .......... .......... .......... ..........  9% 57.4M 0s
   250K .......... .......... .......... .......... .......... 11%  164M 0s
   300K .......... .......... .......... .......... .......... 13%  304M 0s
   350K .......... .......... .......... .......... .......... 15% 99.5M 0s
   400K .......... .......... .......... .......... .......... 17% 76.6M 0s
   450K .......... .......... .......... .......... .......... 19%  117M 0s
   500K .......... .......... .......... .......... .......... 21%  319M 0s
   550K .......... .......... .......... .......... .......... 23%  288M 0s
   600K .......... .......... .......... .......... .......... 25%  250M 0s
   650K .......... .......... .......... .......... .......... 27%  189M 0s
   700K .......... .......... .......... .......... .......... 29% 49.0M 0s
   750K .......... .......... .......... .......... .......... 31%  262M 0s
   800K .......... .......... .......... .......... .......... 33%  579M 0s
   850K .......... .......... .......... .......... .......... 35%  563M 0s
   900K .......... .......... .......... .......... .......... 37%  245M 0s
   950K .......... .......... .......... .......... .......... 39%  204M 0s
  1000K .......... .......... .......... .......... .......... 41%  393M 0s
  1050K .......... .......... .......... .......... .......... 43%  124M 0s
  1100K .......... .......... .......... .......... .......... 45% 72.6M 0s
  1150K .......... .......... .......... .......... .......... 47%  507M 0s
  1200K .......... .......... .......... .......... .......... 49%  210M 0s
  1250K .......... .......... .......... .......... .......... 51%  401M 0s
  1300K .......... .......... .......... .......... .......... 53%  291M 0s
  1350K .......... .......... .......... .......... .......... 55%  326M 0s
  1400K .......... .......... .......... .......... .......... 56%  239M 0s
  1450K .......... .......... .......... .......... .......... 58%  257M 0s
  1500K .......... .......... .......... .......... .......... 60%  157M 0s
  1550K .......... .......... .......... .......... .......... 62%  310M 0s
  1600K .......... .......... .......... .......... .......... 64%  203M 0s
  1650K .......... .......... .......... .......... .......... 66%  176M 0s
  1700K .......... .......... .......... .......... .......... 68%  445M 0s
  1750K .......... .......... .......... .......... .......... 70%  295M 0s
  1800K .......... .......... .......... .......... .......... 72%  181M 0s
  1850K .......... .......... .......... .......... .......... 74%  404M 0s
  1900K .......... .......... .......... .......... .......... 76% 9.58M 0s
  1950K .......... .......... .......... .......... .......... 78%  570M 0s
  2000K .......... .......... .......... .......... .......... 80%  536M 0s
  2050K .......... .......... .......... .......... .......... 82%  472M 0s
  2100K .......... .......... .......... .......... .......... 84%  434M 0s
  2150K .......... .......... .......... .......... .......... 86%  424M 0s
  2200K .......... .......... .......... .......... .......... 88%  475M 0s
  2250K .......... .......... .......... .......... .......... 90%  467M 0s
  2300K .......... .......... .......... .......... .......... 92%  564M 0s
  2350K .......... .......... .......... .......... .......... 94% 99.4M 0s
  2400K .......... .......... .......... .......... .......... 96% 34.5M 0s
  2450K .......... .......... .......... .......... .......... 98%  218M 0s
  2500K .......... .......... .......... .......... .....     100%  130M=0.2s

2020-03-02 04:15:36 (119 Mb/s) - ‘/dev/null’ saved [2606354/2606354]

